fixin details css

--- a/src/stylus/scroll-bar.styl
+++ b/src/stylus/scroll-bar.styl
@@ -1,4 +1,4 @@
-body
+*
   &::-webkit-scrollbar
     width: 8px     /* Tamaño del scroll en vertical */
     height: 8px    /* Tamaño del scroll en horizontal */
@@ -22,4 +22,4 @@ body
   &::-webkit-scrollbar-track:hover
   &::-webkit-scrollbar-track:active 
     background: #d4d4d4;
-  
+    
