--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -16,7 +16,7 @@ body
   font-family 'Rubik', sans-serif
   background var(--veryDarkBlue)
   color var(--ligthCyan)
-  font-size 18px
+  font-size 16px
   letter-spacing 1px
 
 .u-h1
@@ -32,6 +32,14 @@ body
 .u-h4
   @extends .u-h1
   font-size 1.2em
+  margin-top .5em
+.u-h5
+  @extends .u-h1
+  font-size 1em
+  margin-top .5em
+.u-h6
+  @extends .u-h1
+  font-size .9em
   margin-top .5em
 .u-p
   color var(--grayishBlue)
