--- a/src/stylus/entry-task.styl
+++ b/src/stylus/entry-task.styl
@@ -6,11 +6,12 @@
   &-label
     margin .7em 0 .2em
     display block
-    font-size 20px
+    font-size 1em
   &-input
     margin-right 1.2em
+    margin-bottom .2em
     padding .1em .5em
-    font-size 18px
+    font-size 1em
     flex-grow 1
     border-radius .5em
     border none
@@ -21,7 +22,7 @@
   &-error
     visibility hidden
     color var(--red)
-    font-size 17px
+    font-size .8em
     font-weight 500
     letter-spacing 1px
     margin-left .5em
