--- a/src/stylus/tasks.styl
+++ b/src/stylus/tasks.styl
@@ -1,8 +1,8 @@
 .tasks
-  margin 2em 0
+  margin 1.2em 0
   &-container
     overflow auto
-    min-height calc(100vh - 463px)
+    max-height: calc(100vh - 356px)
     &.is-empty
       display flex
       justify-content center
@@ -12,8 +12,8 @@
       margin-top 0
     &:last-child
       margin-bottom 0
-    margin .5em 0
-    padding 1em .7em
+    margin .2em 0
+    padding .7em
     display flex
     justify-content space-between
     border-radius .5em
