--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,25 +1,25 @@
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 8px /* Tamaño del scroll en vertical */;
   height: 8px /* Tamaño del scroll en horizontal */;
   display: none /* Ocultar scroll */;
 }
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 4px;
 }
-body::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
   background: #b3b3b3;
   box-shadow: 0 0 2px 1px rgba(0,0,0,0.2);
 }
-body::-webkit-scrollbar-thumb:active {
+*::-webkit-scrollbar-thumb:active {
   background-color: #999;
 }
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: #e1e1e1;
   border-radius: 4px;
 }
-body::-webkit-scrollbar-track:hover,
-body::-webkit-scrollbar-track:active {
+*::-webkit-scrollbar-track:hover,
+*::-webkit-scrollbar-track:active {
   background: #d4d4d4;
 }
 .colors {
@@ -62,12 +62,13 @@ body::-webkit-scrollbar-track:active {
 .entry-task-label {
   margin: 0.7em 0 0.2em;
   display: block;
-  font-size: 20px;
+  font-size: 1em;
 }
 .entry-task-input {
   margin-right: 1.2em;
+  margin-bottom: 0.2em;
   padding: 0.1em 0.5em;
-  font-size: 18px;
+  font-size: 1em;
   flex-grow: 1;
   border-radius: 0.5em;
   border: none;
@@ -80,7 +81,7 @@ body::-webkit-scrollbar-track:active {
 .entry-task-error {
   visibility: hidden;
   color: var(--red);
-  font-size: 17px;
+  font-size: 0.8em;
   font-weight: 500;
   letter-spacing: 1px;
   margin-left: 0.5em;
@@ -89,11 +90,11 @@ body::-webkit-scrollbar-track:active {
   padding: 1em 3em;
 }
 .tasks {
-  margin: 2em 0;
+  margin: 1.2em 0;
 }
 .tasks-container {
   overflow: auto;
-  min-height: calc(100vh - 463px);
+  max-height: calc(100vh - 356px);
 }
 .tasks-container.is-empty {
   display: flex;
@@ -101,8 +102,8 @@ body::-webkit-scrollbar-track:active {
   align-items: center;
 }
 .tasks-item {
-  margin: 0.5em 0;
-  padding: 1em 0.7em;
+  margin: 0.2em 0;
+  padding: 0.7em;
   display: flex;
   justify-content: space-between;
   border-radius: 0.5em;
@@ -159,13 +160,15 @@ body {
   font-family: 'Rubik', sans-serif;
   background: var(--veryDarkBlue);
   color: var(--ligthCyan);
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: 1px;
 }
 .u-h1,
 .u-h2,
 .u-h3,
-.u-h4 {
+.u-h4,
+.u-h5,
+.u-h6 {
   font-size: 2em;
   font-weight: 500;
 }
@@ -178,6 +181,14 @@ body {
 }
 .u-h4 {
   font-size: 1.2em;
+  margin-top: 0.5em;
+}
+.u-h5 {
+  font-size: 1em;
+  margin-top: 0.5em;
+}
+.u-h6 {
+  font-size: 0.9em;
   margin-top: 0.5em;
 }
 .u-p {
