--- a/src/stylus/tasks.styl
+++ b/src/stylus/tasks.styl
@@ -2,7 +2,9 @@
   margin 1.2em 0
   &-container
     overflow auto
-    max-height: calc(100vh - 356px)
+    height: calc(100vh - 356px)
+    padding 0
+    list-style: none
     &.is-empty
       display flex
       justify-content center
