--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,16 +27,40 @@
   flex-grow: 1;
   margin-bottom: 0.7em;
 }
+.colors-options {
+  display: flex;
+}
+.colors input[type="radio"] {
+  display: none;
+}
+.colors input[id="red"]:checked ~ div [for="red"] {
+  border: 1px solid var(--softBlue);
+  transform: scale(0.85);
+}
+.colors input[id="amber"]:checked ~ div [for="amber"] {
+  border: 1px solid var(--softBlue);
+  transform: scale(0.85);
+}
+.colors input[id="green"]:checked ~ div [for="green"] {
+  border: 1px solid var(--softBlue);
+  transform: scale(0.85);
+}
 .colors-option {
   height: 50px;
   width: 50px;
-  margin-top: 0.7em;
   margin-right: 2em;
   border-radius: 0.5em;
-  transition: 0.3s all;
+  transition: 0.1s all;
 }
 .colors-option:hover {
   cursor: pointer;
+}
+.colors-option:active,
+.colors-option:hover {
+  opacity: 0.8;
+}
+.colors-option:active {
+  transform: scale(0.9);
 }
 .colors-option.is-red {
   color: var(--red);
@@ -54,7 +78,12 @@
   box-shadow: 0 5px 10px -5px currentColor;
 }
 .colors-option.is-selected {
-  border: 2px solid var(--softBlue);
+  border: 1px solid var(--softBlue);
+  transform: scale(0.85);
+}
+.entry-task label,
+.entry-task small {
+  display: block;
 }
 .entry-task-control {
   display: flex;
@@ -79,22 +108,20 @@
   outline: none;
 }
 .entry-task-error {
-  visibility: hidden;
   color: var(--red);
   font-size: 0.8em;
   font-weight: 500;
   letter-spacing: 1px;
   margin-left: 0.5em;
 }
-.entry-task-dates button {
-  padding: 1em 3em;
-}
 .tasks {
   margin: 1.2em 0;
 }
 .tasks-container {
   overflow: auto;
-  max-height: calc(100vh - 356px);
+  height: calc(100vh - 356px);
+  padding: 0;
+  list-style: none;
 }
 .tasks-container.is-empty {
   display: flex;
@@ -160,7 +187,7 @@ body {
   font-family: 'Rubik', sans-serif;
   background: var(--veryDarkBlue);
   color: var(--ligthCyan);
-  font-size: 16px;
+  font-size: 12px;
   letter-spacing: 1px;
 }
 .u-h1,
@@ -196,6 +223,11 @@ body {
   line-height: 1.8;
   font-size: 0.9em;
 }
+ul {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
 a {
   color: var(--grayishBlue);
   transition: 0.3s all;
@@ -205,6 +237,7 @@ a:hover {
 }
 .u-wrapper,
 .u-wrapper-md {
+  min-width: 290px;
   max-width: 1280px;
   margin: auto;
   padding: 0 1em;
@@ -218,7 +251,7 @@ a:hover {
 .u-button {
   background: var(--softBlue);
   color: #fff;
-  padding: 1em 1em;
+  padding: 1em;
   font-size: 0.9em;
   font-weight: 600;
   border-radius: 0.5em;
@@ -256,7 +289,13 @@ a:hover {
   align-items: center;
 }
 .u-button.with-icon img {
-  width: 25px;
+  width: 20px;
+}
+.u-button.is-small img {
+  width: 1.2em;
+}
+.u-button.is-large {
+  padding: 1em 3em;
 }
 .u-button:focus {
   outline: none;
