First part valid form

--- a/src/stylus/tasks.styl
+++ b/src/stylus/tasks.styl
@@ -19,6 +19,7 @@
     display flex
     justify-content space-between
     border-radius .5em
+    transition .5s all
     &.is-red
       background var(--red)
       color var(--ligthCyan)
