--- a/src/stylus/entry-task.styl
+++ b/src/stylus/entry-task.styl
@@ -10,22 +10,26 @@
     display block
     font-size 1em
   &-input
+    width 100%
+    box-sizing border-box
     margin-right 1.2em
     margin-bottom .2em
-    padding .1em .5em
+    padding 1em .5em
     font-size 1em
     flex-grow 1
     border-radius .5em
     border none
-    box-shadow 0 5px 10px -5px var(--softBlue)
     transition .3s all
     &:focus
       outline none
+  small
+    visibility hidden
   &-error
-    // visibility hidden
+    visibility visible !important
     color var(--red)
     font-size .8em
     font-weight 500
     letter-spacing 1px
     margin-left .5em
+    margin-bottom .7em
       
