--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -71,7 +71,7 @@ a
   background var(--softBlue)
   color white
   padding 1em
-  font-size .9em
+  font-size 1em
   font-weight 600
   border-radius .5em
   margin-left .5em
