--- a/src/stylus/tasks.styl
+++ b/src/stylus/tasks.styl
@@ -9,6 +9,8 @@
       display flex
       justify-content center
       align-items center
+  &-dates
+    display block
   &-item
     &:first-child
       margin-top 0
