--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -131,6 +131,9 @@
   justify-content: center;
   align-items: center;
 }
+.tasks-dates {
+  display: block;
+}
 .tasks-item {
   margin: 0.2em 0;
   padding: 0.7em;
@@ -256,7 +259,7 @@ a:hover {
   background: var(--softBlue);
   color: #fff;
   padding: 1em;
-  font-size: 0.9em;
+  font-size: 1em;
   font-weight: 600;
   border-radius: 0.5em;
   margin-left: 0.5em;
