--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -1,6 +1,7 @@
 @import './scroll-bar.styl'
 @import './entry-task.styl'
 @import './tasks.styl'
+@import './footer.styl'
 
 :root
   --softBlue hsl(231, 69%, 60%)
