--- a/src/stylus/tasks.styl
+++ b/src/stylus/tasks.styl
@@ -4,6 +4,7 @@
     overflow auto
     padding 0
     list-style: none
+    height: calc(100vh - 356px)
     &.is-empty
       display flex
       justify-content center
