--- a/src/stylus/tasks.styl
+++ b/src/stylus/tasks.styl
@@ -47,3 +47,6 @@
   &-finish-timer
     margin-top 0 !important
     display block
+  @media screen and (max-width: 460px)
+    &-dates
+      font-size .7em
