--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -90,6 +90,7 @@ a
     box-shadow none
     border 1px solid var(--ligthCyan)
     border-radius: 50%
+    padding 1em 1.2em
   &.is-red
     color white
     background var(--red)
